# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-ci.yml
gendiff/: __init__.py  diff.py  diff_builder.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: diff.py  diff_builder.py  gendiff.py  parser.py
src/hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
src/python_project_50.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_diff.py  test_gendiff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/test_data/: expected_json.txt  expected_nested_json.txt
