[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Nikita Volkov", email = "mrtelnor@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.uv]
package = true
