[project]
name = "hexlet-code"
version = "1.0.2"
description = ""
authors = [
    { name = "Nikita Volkov", email = "mrtelnor@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main" 

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
